@@ -11,8 +11,8 @@
 .tt-suggestion.tt-cursor {color:#fff; background-color:#0097cf;}
 .tt-suggestion p {margin:0;}
 
-input#generator_maxheight	{color:#fff;}
-input#generator_limit		{color:#fff;}
+input#generator_maxheight	{color:#000;}
+input#generator_limit		{color:#000;}
 
 /*	Input placeholder font color	*/
 ::-webkit-input-placeholder {/* WebKit, Blink, Edge */color:#bbb;}
