@@ -1,3 +1,8 @@
+Development Portal (2017-06-19 shi)
+==============================
+Fixed input font color for generator
+
+
 Development Portal (2017-06-16 shi)
 ==============================
 Fix counter increment for 2 or more digits
